use relative image urls

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="inner-page clearfix">
     <div class="container-logo">
-        <img src="/images/rafflebox.png" alt="Rafflebox logo" class="responsive"/>
+        <img src="./images/rafflebox.png" alt="Rafflebox logo" class="responsive"/>
     </div>
     {% include navigation.html %}
 </div>
