--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <div class="navigation">
-    <a href="#" class="hamburger"><span>Menu</span></a>
+    <a href="#" class="hamburger" id="link-menu"><span>Menu</span></a>
     <ul>
       <li class="about"><a href="/about.html">About</a></li>
       <li class="raffles"><a href="/raffles.html">Live raffles</a></li>
