--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <div class="inner-page clearfix">
     <div class="container-logo">
-        <img src="./images/rafflebox.png" alt="Rafflebox logo" class="responsive"/>
+        <a href="./">
+            <img src="./images/rafflebox.png" alt="Rafflebox logo" class="responsive" />
+        </a>
     </div>
     {% include navigation.html %}
 </div>
