--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -37,6 +37,55 @@ form input[type="search"] {
   -moz-box-shadow: none;
 }
 
+form .container-select {
+  border: solid 1px $black;
+  clear: both;
+  display: block;
+  height: 38px;
+  overflow: hidden;
+  padding: 0;
+  margin: 0 0 14px;
+  position: relative;
+  width: 100%;
+}
+
+form .container-select select {
+  background: transparent;
+  border: none;
+  border-radius: 0;
+  border-color: transparent;
+  bottom: 0;
+  box-shadow: none;
+  cursor: pointer;
+  font-size: $medium;
+  height: 35px;
+  left: 0;
+  outline: 0 !important;
+  outline-style: none;
+  padding: 7px;
+  position: absolute;
+  top: 0;
+  width: 140%;
+  z-index: 11;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+}
+
+form .container-select:after {
+  bottom: 1px;
+  content: url('../images/arrow-down.png');
+  cursor: pointer;
+  padding: 7px;
+  pointer-events: none;
+  position: absolute;
+  right: 1px;
+  top: 1px;
+  transform: scale(0.42);
+  z-index: 17;
+}
 
 .sign-up-success .container-image, .sign-up-failure .container-image {
   margin: 0 0 70px;
